# arinc_429.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: basic_std.rs
src/: lib.rs  parity_error.rs
src/constants/: mod.rs  sal.rs
tests/: test_serde.rs
