[package]
name = "arinc_429"
version = "0.1.5"


authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/arinc_429.rs"


description = "Types and constants for ARINC 429 communication"
keywords = ["ARINC", "avionics"]
categories = ["no-std"]

[dependencies]
serde = { version = "^1.0.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = "^1.0.0"

[features]
std = []
default = ["std"]
